@@ -1,3 +1,8 @@
+2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* runme_cb.adb, ws_cb.adb:
+	Change case of Something_ID to Something_Id.
+
 2004-09-15  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
@@ -7,7 +12,7 @@
 
 	* demos.gpr:
 	Do not use "null;" as it is not support on GNAT 5.02.
-	
+
 2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
